finished with font popins

--- a/ClassWork/Template example(22.09.2019)/index.html
+++ b/ClassWork/Template example(22.09.2019)/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Template</title>
-    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,800,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/reset.css" />
 </head>
@@ -18,14 +18,19 @@
                 <button>Register now</button>
             </div>
             <div class="hero-block-information">
-                <img src="img/logo.svg" alt="conferences logo">
+                <img src="img/logo.svg" alt="conferences logo" />
                 <div class="hero-block-details">
-                    <span class="hero-block-details_heading">FIGMA AFRICA <br>
-                        International <br>
-                        Conference</span>
-                    <span class="hero-block-details_paragraph">December 6 - 8, 2018 <br>
-                         Kigali Conference Centre <br>
-                          Kimihurura Roundabout</span>
+                    <span class="hero-block-details_heading">FIGMA AFRICA </span>
+                    <span class="hero-block-details_heading 1">  International </span>
+                    <span class="hero-block-details_heading 2"> Conference</span>
+                    <span class="hero-block-details_heading-1">
+                        December 6 - 8, 2018 </span>
+                    <span class="hero-block-details_heading-2"> 
+                        Kigali Conference Centre <br>
+                        Kimihurura Roundabout</span>
+                    <button>Register now</button>
+                    <span class="hero-block-details_heading-3">
+                        *Limited seats available</span>
                 </div>
             </div>
 
