--- a/ClassWork/Template example(22.09.2019)/index.html
+++ b/ClassWork/Template example(22.09.2019)/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Template</title>
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,800,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/reset.css" />
 </head>
@@ -17,26 +17,47 @@
             <div class="header">
                 <button>Register now</button>
             </div>
+
+
+
             <div class="hero-block-information">
                 <img src="img/logo.svg" alt="conferences logo" />
                 <div class="hero-block-details">
-                    <span class="hero-block-details_heading">FIGMA AFRICA </span>
-                    <span class="hero-block-details_heading 1">  International </span>
-                    <span class="hero-block-details_heading 2"> Conference</span>
-                    <span class="hero-block-details_heading-1">
+                    <span class="hero-block-details_heading">FIGMA AFRICA <br>
+                    International <br>
+                     Conference</span>
+                    <span class="hero-block-details_heading-date">
                         December 6 - 8, 2018 </span>
-                    <span class="hero-block-details_heading-2"> 
+                    <span class="hero-block-details_heading-information"> 
                         Kigali Conference Centre <br>
                         Kimihurura Roundabout</span>
                     <button>Register now</button>
-                    <span class="hero-block-details_heading-3">
+                    <span class="hero-block-details_heading-limited">
                         *Limited seats available</span>
                 </div>
             </div>
 
 
         </div>
+
         <div class="conference-details">
+            <div class="conference-number-title">OUR CONFERENCES IN NUMBERS</div>
+            <div class="conference-information">
+                <p>Countries</p>
+                <span>12</span>
+            </div>
+            <div class="conference-information">
+                <p>Cities</p>
+                <span>30</span>
+            </div>
+            <div class="conference-information">
+                <p>Speakers</p>
+                <span>120</span>
+            </div>
+            <div class="conference-information">
+                <p>Attendees</p>
+                <span>750+</span>
+            </div>
 
         </div>
     </div>
