--- a/ClassWork/Template example(22.09.2019)/index.html
+++ b/ClassWork/Template example(22.09.2019)/index.html
@@ -17,10 +17,7 @@
             <div class="header">
                 <button>Register now</button>
             </div>
-
-
-
-            <div class="hero-block-information">
+            <div class="hero-block-information col-sm">
                 <img src="img/logo.svg" alt="conferences logo" />
                 <div class="hero-block-details">
                     <span class="hero-block-details_heading">FIGMA AFRICA <br>
@@ -36,8 +33,6 @@
                         *Limited seats available</span>
                 </div>
             </div>
-
-
         </div>
 
         <div class="conference-details">
@@ -58,7 +53,6 @@
                 <p>Attendees</p>
                 <span>750+</span>
             </div>
-
         </div>
     </div>
 </body>
