--- a/HomeWork/(29.09.2019)Ifandswitch/index.html
+++ b/HomeWork/(29.09.2019)Ifandswitch/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <!-- <script src="./js/ifElse.js"></script> -->
-    <script src="./js/switch.js"></script>
+    <title>JS</title>
+
+
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    
+
+    <div class="container">
+        <div class="row">
+            <button id="callif"> <a href="#"> Call If</a></button>
+            <button id="callswitch"> <a href="#"> Call Switch</a></button>
+        </div>
+    </div>
+    <script src="./js/switch.js"></script>
+
 </body>
+
 </html>
