--- a/HomeWork/(29.09.2019)Ifandswitch/index.html
+++ b/HomeWork/(29.09.2019)Ifandswitch/index.html
@@ -20,7 +20,7 @@
         </div>
     </div>
     
-    <script src="./js/switch.js"></script>
+    <script src="./js/javascript.js"></script>
 </body>
 
 </html>
