add new map with test and add one button in homework

--- a/HomeWork/(29.09.2019)Ifandswitch/index.html
+++ b/HomeWork/(29.09.2019)Ifandswitch/index.html
@@ -16,6 +16,7 @@
     <div class="container">
         <div class="row">
             <button id="callif"> <a href="#"> Call If</a></button>
+            <button id="callifwith"> <a href="#"> Call IF</a></button>
             <button id="callswitch"> <a href="#"> Call Switch</a></button>
         </div>
     </div>
