--- a/ClassWork/06.10.2019/index.html
+++ b/ClassWork/06.10.2019/index.html
@@ -18,5 +18,7 @@
         </ul>
     </div>
     <p>Your total price will be: <span id="your-total-price"></span>$</p>
+    <p>Your total price will be: <span id="your-total-price2"></span>$</p>
+
 </body>
 </html>
