--- a/ClassWork/(13.10.2019)Verification-homework/index.html
+++ b/ClassWork/(13.10.2019)Verification-homework/index.html
@@ -12,5 +12,5 @@
     <p>Your total price will be: <span id="your-total-price"></span>$</p>
     
 </body>
-<script src="index.js"></script>
+<script defer src="index.js"></script>
 </html>
