--- a/ClassWork/Lesson 18(20.10.2019)/index.html
+++ b/ClassWork/Lesson 18(20.10.2019)/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Lesson 17 (Testing)</title>
+    <title>Lesson 18 (Data Structures)</title>
 </head>
 <body>
     
 </body>
-<script type="module" src="index.js"></script>
+<script src="index.js"></script>
 </html>
