--- a/HomeWork/HomeWork_19(27.10)/index.html
+++ b/HomeWork/HomeWork_19(27.10)/index.html
@@ -19,7 +19,7 @@
             <button id="second" class="btn second" name="second-btn" type="button">Second</button>
             <button id="third" class="btn third" name="third-btn" type="button">Third</button>
         
-        <p id="paragraph">Please click any button</p>
+        <p id="paragraph">Please click on any button</p>
 
     </div>
 </body>
