--- a/HomeWork/HomeWork_19(27.10)/index.html
+++ b/HomeWork/HomeWork_19(27.10)/index.html
@@ -8,16 +8,21 @@
     <title></title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
-
+<!--  -->
 <body>
     <div class="container">
 
         <h1 id="h1" class="title">Events home work</h1>
-        <button id="first" class="btn first" name="first-btn" type="button">First</button>
+        <button id="first" class="btn first" name="first-btn" type="button">First</button> 
+        <!-- onclick="changeValueFirstBtn()" -->
         <button id="second" class="btn second" name="second-btn" type="button">Second</button>
         <button id="third" class="btn third" name="third-btn" type="button">Third</button>
         <p id="paragraph">Please click on any button</p>
-
+<script>
+// first.onclick = function(){
+//     document.getElementById('paragraph').innerText = 'other way';
+// }
+</script>
     </div>
 </body>
 
