--- a/HomeWork/HomeWork_20(02.11)/index.html
+++ b/HomeWork/HomeWork_20(02.11)/index.html
@@ -11,35 +11,33 @@
     <style>
         .container {
             padding: 100px 0px;
+            flex-wrap: wrap;
         }
-
         .btn-block {
             padding: 10px 0px;
         }
-
-        .btn-block button {
-            margin-right: 10px;
+        .second {
+            margin: 0 10px
         }
-
-        .btn-block button:last-child {
-            margin-right: 0px;
-
+        .container h1 {
+            flex-basis: 100%;
+            text-align: center;
+        }
+        .paragraph {
+            text-align: center;
+            flex-basis: 100%;
+            margin-top: 10px;
         }
     </style>
 </head>
 
 <body>
-    <div class="container d-flex flex-column align-items-center">
-        <div class="title">
-            <h1 class="h">Events Home work</h1>
-        </div>
-        <div id="btn-block" class="btn-block d-flex justify-content-center">
-            <button class="btn btn-primary first" type="button">First</button>
-            <button class="btn btn-success second" type="button">second</button>
-            <button class="btn btn-danger third" type="button">third</button>
-        </div>
+    <div class="container d-flex  justify-content-center" id="btn-main">
+        <h1>Events Home work</h1>
+        <button class="btn btn-primary first" type="button">First</button>
+        <button class="btn btn-success second" type="button">second</button>
+        <button class="btn btn-danger third" type="button">third</button>
         <p id="paragraph" class="paragraph">Please click on any button</p>
-
     </div>
 </body>
 <script src="index.js"></script>
