--- a/HomeWork/HomeWork_20(02.11)/index.html
+++ b/HomeWork/HomeWork_20(02.11)/index.html
@@ -16,7 +16,7 @@
         .btn-block {
             padding: 10px 0px;
         }
-        .second {
+        .second-btn {
             margin: 0 10px
         }
         .container h1 {
@@ -34,9 +34,9 @@
 <body>
     <div class="container d-flex  justify-content-center" id="btn-main">
         <h1>Events Home work</h1>
-        <button class="btn btn-primary first" type="button">First</button>
-        <button class="btn btn-success second" type="button">second</button>
-        <button class="btn btn-danger third" type="button">third</button>
+        <button class="first-btn btn-primary btn" type="button">First</button>
+        <button class="second-btn btn-success btn" type="button">second</button>
+        <button class="third-btn btn-danger btn" type="button">third</button>
         <p id="paragraph" class="paragraph">Please click on any button</p>
     </div>
 </body>
